fix model controls squashing

--- a/static/index.css
+++ b/static/index.css
@@ -56,6 +56,7 @@ canvas {
 #model-controls {
     display: flex;
     flex-direction: column;
+    flex-shrink: 0;
     margin: 5px;
 }
 
